--- a/image.html
+++ b/image.html
@@ -4,16 +4,16 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Eric's Responsive Cat</title>
+		<title>Maya's Responsive Cat</title>
 		<link rel="stylesheet" href="kitty.css">
 	</head>
 
 	<body>
-	<div id="small">
+	<div id="small center-verticle center-horizontal">
 		<img src="images/kitten-small.png">
 		</img>
 		</div>
-		<div id="kittyloaf">
+		<div id="kittyloaf center-verticle center-horizontal">
 		<img src="images/kittyloaf.gif">
 		</img>
 		</div>
