--- a/image.html
+++ b/image.html
@@ -9,11 +9,11 @@
 	</head>
 
 	<body>
-	<div id="small center-verticle center-horizontal">
+	<div class="small center-verticle center-horizontal">
 		<img src="images/kitten-small.png">
 		</img>
 		</div>
-		<div id="kittyloaf center-verticle center-horizontal">
+		<div class="kittyloaf center-verticle center-horizontal">
 		<img src="images/kittyloaf.gif">
 		</img>
 		</div>
