--- a/image.html
+++ b/image.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="kitty.css">
 	</head>
 	<body>
+		<center>
 	<div class="small center-horizontal">
 		<img src="images/kitten-small.png">
 		</img>
@@ -15,5 +16,6 @@
 		<img src="images/kittyloaf.gif">
 		</img>
 		</div>
+	</center>
 	</body>
 </html>
