--- a/image.html
+++ b/image.html
@@ -7,11 +7,11 @@
 		<link rel="stylesheet" href="kitty.css">
 	</head>
 	<body>
-	<div class="small center-horizontal">
+	<div class="small center-verticle">
 		<img src="images/kitten-small.png">
 		</img>
 		</div>
-		<div class="kittyloaf center-horizontal">
+		<div class="kittyloaf center-verticle">
 		<img src="images/kittyloaf.gif">
 		</img>
 		</div>
