--- a/image.html
+++ b/image.html
@@ -11,7 +11,7 @@
 		<img src="images/kitten-small.png">
 		</img>
 		</div>
-		<div class="kittyloaf center-verticle">
+		<div class="kittyloaf center-vertical">
 		<img src="images/kittyloaf.gif">
 		</img>
 		</div>
