--- a/image.html
+++ b/image.html
@@ -7,13 +7,9 @@
 		<link rel="stylesheet" href="kitty.css">
 	</head>
 	<body>
-	<div class="small center-verticle center-horizontal">
-		<img src="images/kitten-small.png">
+	<img class= "cat">
 		</img>
-		</div>
-		<div class="kittyloaf center-vertical center-horizontal">
-		<img src="images/kittyloaf.gif">
-		</img>
-		</div>
+	<img class="kittyloaf">
+	</img>
 	</body>
 </html>
